added pass 2 to notebook

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "* Owlready2 * Warning: optimized Cython parser module 'owlready2_optimized' is not available, defaulting to slower Python implementation\n",
+      "\n",
+      "Warning: SQLite3 version 3.40.0 and 3.41.2 have huge performance regressions; please install version 3.41.1 or 3.42!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from owlready2 import *\n",
     "import spacy\n",
@@ -20,15 +31,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----\n",
     "# Pass 1:\n",
     "- finds matches from a set of confident attributes using a Spacy matcher\n",
     "    - preprocessing performed to remove punctuation adn convert to lowercase\n",
-    "- samples with no matches have attributes, title, and paragraph written to the "
+    "- samples with no matches have attributes, title, and paragraph written to the the tissue_tmp_1.jsonl file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +61,20 @@
     "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
     "\n",
     "# create a reverse mapping of labels to BRENDA ids\n",
-    "# reverse mapping removes redundant end terms from the key where possible\n",
-    "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
     "\n",
     "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
     "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
-    "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
-    "\n",
+    "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reverse mapping removes redundant end terms from the key where possible\n",
+    "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
     "additional_labels = {}\n",
     "for key, value in labels_reverse.items():\n",
     "    if key.endswith(redundant_end_terms):\n",
@@ -65,7 +84,7 @@
     "    if key not in labels_reverse:\n",
     "        labels_reverse[key] = value\n",
     "\n",
-    "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "nlp = spacy.load('en_core_web_lg')\n",
     "# blank matcher with vocab from the large model\n",
     "matcher = Matcher(nlp.vocab)\n",
     "# standard tokenizer from spacy\n",
@@ -78,7 +97,7 @@
     "        pattern = [{'LOWER': token.lower_} for token in tokens]\n",
     "        patterns.append(pattern)\n",
     "\n",
-    "matcher.add(\"bto\", patterns, greedy=\"LONGEST\")\n"
+    "matcher.add('bto', patterns, greedy='LONGEST')\n"
    ]
   },
   {
@@ -256,7 +275,116 @@
     "handler = BioSamplesHandler(positive_attributes, '/home/ec2-user/workspace/data/results/tissue_tmp_1.jsonl', '/home/ec2-user/workspace/data/results/tissue_output.jsonl')\n",
     "parser.setContentHandler(handler)\n",
     "\n",
-    "parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n"
+    "# comment out the following line to rerun the parser\n",
+    "# parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Pass 2\n",
+    "- Runs the Spacy matcher with no optional terms on all the attributes\n",
+    "\n",
+    "!! Code was run in a sperate file using GNU parallel for faster execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from owlready2 import *\n",
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "import xml.sax\n",
+    "import orjson as json\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "def preprocess(input_str):\n",
+    "    punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
+    "    input_str = re.sub(punct_pattern, ' ', input_str)\n",
+    "    return input_str.lower().strip()\n",
+    "\n",
+    "\n",
+    "# file will read an input file that is in the format tissue_tmp_1ax and will output a file in the format tissue_tmp_2ax.jsonl\n",
+    "\n",
+    "# load the BRENDA ontology\n",
+    "onto = get_ontology('http://purl.obolibrary.org/obo/bto.owl').load()\n",
+    "\n",
+    "# load classes and synonyms\n",
+    "classes = {c.name: c.label.first() for c in onto.classes()}\n",
+    "class_synonyms = {c.name: c.hasExactSynonym + c.hasRelatedSynonym for c in onto.classes()}\n",
+    "\n",
+    "# add additional synonyms\n",
+    "class_synonyms['BTO_0000440'] += ['stool']\n",
+    "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
+    "\n",
+    "# create a reverse mapping of labels to BRENDA ids\n",
+    "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
+    "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
+    "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_lg')\n",
+    "# blank matcher with vocab from the large model\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "# standard tokenizer from spacy\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
+    "\n",
+    "patterns = []\n",
+    "for label in labels_reverse.keys():\n",
+    "    tokens = tokenizer(label)\n",
+    "    pattern = [{'LOWER': token.lower_} for token in tokens]\n",
+    "    patterns.append(pattern)\n",
+    "\n",
+    "matcher.add('bto', patterns, greedy='LONGEST')\n",
+    "\n",
+    "\n",
+    "assert len(sys.argv) == 2, \"Please provide an input file\"\n",
+    "input_file = sys.argv[1]\n",
+    "output_file = input_file.replace('tmp_1', 'output_2')\n",
+    "tmp_file = input_file.replace('tmp_1', 'tmp_2')\n",
+    "\n",
+    "open(output_file, 'w').close()\n",
+    "open(tmp_file, 'w').close()\n",
+    "\n",
+    "with open(input_file, 'r') as f:\n",
+    "    print(\"Starting second pass for \", input_file)\n",
+    "    for line in f:\n",
+    "        cur_dict = {} # stores the data to be written to the output file if applicable\n",
+    "        matches = [] # stores the matches for the current biosample\n",
+    "        # biosample_dict stores the biosample content\n",
+    "        biosample_dict = json.loads(line)\n",
+    "        cur_dict['biosample_id'] = biosample_dict['biosample_id']\n",
+    "        cur_dict['sra_id'] = biosample_dict['sra_id']\n",
+    "        # attributes is a dictionary of the biosample attributes\n",
+    "        attributes = biosample_dict['attributes']\n",
+    "        for attribute_name in attributes:\n",
+    "            attribute_value = preprocess(attributes[attribute_name])\n",
+    "            attribute_tokens = tokenizer(attribute_value)\n",
+    "            matches += matcher(attribute_tokens, as_spans=True)\n",
+    "\n",
+    "        if matches != []:\n",
+    "            tissue_matches = ','.join({m.text for m in matches})\n",
+    "            bto_matches = ','.join({labels_reverse[m.text.lower()] for m in matches})\n",
+    "            cur_dict['tissue'] = tissue_matches\n",
+    "            cur_dict['bto_matches'] = bto_matches\n",
+    "            with open(output_file, 'ab') as f:\n",
+    "                f.write(json.dumps(cur_dict))\n",
+    "                f.write(b'\\n')\n",
+    "\n",
+    "        else:\n",
+    "            # no matches found in the attributes, writes the biosample content to a tmp file for third pass\n",
+    "            with open(tmp_file, 'ab') as f:\n",
+    "                f.write(json.dumps(biosample_dict))\n",
+    "                f.write(b'\\n')\n",
+    "\n",
+    "    print(\"Finished parsing\", input_file)\n"
    ]
   }
  ],
