updated stats for tissue_map notebook

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -35,7 +35,9 @@
     "# Pass 1:\n",
     "- finds matches from a set of confident attributes using a Spacy matcher\n",
     "    - preprocessing performed to remove punctuation adn convert to lowercase\n",
-    "- samples with no matches have attributes, title, and paragraph written to the the tissue_tmp_1.jsonl file"
+    "- samples with no matches have attributes, title, and paragraph written to the the tissue_tmp_1.jsonl file\n",
+    "\n",
+    "After first pass: 10519273 samples matched"
    ]
   },
   {
@@ -288,7 +290,11 @@
     "# Pass 2\n",
     "- Runs the Spacy matcher with no optional terms on all the attributes\n",
     "\n",
-    "!! Code was run in a sperate file using GNU parallel for faster execution"
+    "!! Code was run in a sperate file using GNU parallel for faster execution !!\n",
+    "\n",
+    "After second pass: \n",
+    "- Additional 6205050 samples matched    \n",
+    "- Total 16724323 samples matched"
    ]
   },
   {
