--- a/notebooks/temp_map/temp_map.ipynb
+++ b/notebooks/temp_map/temp_map.ipynb
@@ -13,15 +13,412 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xml.sax\n",
+    "import json\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Pass 1\n",
+    "- takes the value from any matched attibutes, preprocesses the text and uses a regex expression to extract the temperature and units\n",
+    "- if the value can be converted to a float, assumed to be degrees celsius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BioSamplesHandler(xml.sax.ContentHandler):\n",
+    "    '''\n",
+    "    SAX handler class to read in information form a BioSamples XML file \n",
+    "    - Reads in attribtues that correspond to tmperature \n",
+    "    - Uses regular expressions to extract one or two temperatures and the units from a string\n",
+    "        - Calculates the average temperature if two temperatures are given\n",
+    "    - Creates a dictionary of samples with temperature information\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, positive_attributes, output_file, multiple_temp_file):\n",
+    "        self.positive_attributes = positive_attributes\n",
+    "        self.output_file = output_file\n",
+    "        self.multiple_temp_file = multiple_temp_file\n",
+    "        self.biosample_id = ''\n",
+    "        self.attribute_name = ''\n",
+    "        self.temp_attribute = ''\n",
+    "        self.cur_dict = {}\n",
+    "        self.is_sra = False\n",
+    "        self.sra_id = ''\n",
+    "        self.count = 0\n",
+    "        self.temp_val = None\n",
+    "        self.temp_units = 'C'\n",
+    "        self.units_dict = {'\\u00b0c': 'C', '\\u2103': 'C', 'degrees c': 'C', 'degree c': 'C', 'degrees celsius': 'C', 'degree celsius': 'C', 'c': 'C', \n",
+    "                           '\\u00b0f': 'F', '\\u2109': 'F', 'degrees f': 'F', 'degree f': 'F', 'degrees fahrenheit': 'F', 'degree fahrenheit': 'F', 'f': 'F',\n",
+    "                           '\\u212a': 'K', 'kelvin': 'K', 'k': 'K'}\n",
+    "\n",
+    "    def startDocument(self):\n",
+    "        open(self.output_file, 'w').close()\n",
+    "        open(self.multiple_temp_file, 'w').close()\n",
+    "        print('Started parsing...\\n')\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == 'BioSample':\n",
+    "            self.biosample_id = attrs['accession']\n",
+    "        elif name == 'Attribute':\n",
+    "            try:\n",
+    "                self.attribute_name = attrs['harmonized_name']\n",
+    "            except KeyError:\n",
+    "                self.attribute_name = attrs['attribute_name']\n",
+    "        elif name == 'Id':\n",
+    "            if 'db' in attrs and attrs['db'] == 'SRA':\n",
+    "                self.is_sra = True\n",
+    "\n",
+    "    def characters(self, content):\n",
+    "        if self.is_sra:\n",
+    "            self.sra_id = content\n",
+    "            self.is_sra = False\n",
+    "        elif self.attribute_name != '':\n",
+    "            if self.positive_attributes.intersection({self.attribute_name}):\n",
+    "                if self.temp_val is not None:\n",
+    "                    print('Multiple temp attributes for {}:'.format(self.biosample_id), self.attribute_name)\n",
+    "                    with open(self.multiple_temp_file, 'a') as f:\n",
+    "                        f.write(self.biosample_id + '\\n')\n",
+    "                else:\n",
+    "                    self.temp_attribute = self.attribute_name\n",
+    "                    # valid temperature attribute found so can extract temperature with regex\n",
+    "                    try:\n",
+    "                        self.temp_val = float(content)\n",
+    "                        self.temp_units = 'C'\n",
+    "                    except ValueError:\n",
+    "                        pattern = r'([-]?\\d+[.]?\\d*)\\s*([-\\u00b1]?)\\s*(\\d+[.]?\\d*)?\\s*(\\u00b0c|\\u2103|degrees? c|degrees? celsius|c|\\u00b0f|\\u2109|degrees? f|degrees? fahrenheit|f|\\u212a|kelvin|k)?'\n",
+    "                        results = re.findall(pattern, content, re.IGNORECASE)\n",
+    "                        if results:\n",
+    "                            for result in results:\n",
+    "                                if result[3] == '':\n",
+    "                                    pass\n",
+    "                                else:\n",
+    "                                    # regex match found\n",
+    "                                    if result[1] == '\\u00b1':\n",
+    "                                        # group 3 is the uncertainty\n",
+    "                                        self.temp_val = float(result[0])\n",
+    "                                    elif result[1] == '-':\n",
+    "                                        # group 1 is the lower bound, gruop 3 is the upper bound\n",
+    "                                        self.temp_val = (float(result[0]) + float(result[2])) / 2\n",
+    "                                    else:\n",
+    "                                        # no uncertainty\n",
+    "                                        self.temp_val = float(result[0])\n",
+    "\n",
+    "                                    if result[3] is not None:\n",
+    "                                        # group 4 is the units\n",
+    "                                        self.temp_units = self.units_dict[result[3].lower()]\n",
+    "\n",
+    "                self.attribute_name = ''\n",
+    "\n",
+    "                    \n",
+    "\n",
+    "\n",
+    "    def endElement(self, name):\n",
+    "        if name == 'BioSample':\n",
+    "            if self.temp_val is not None:\n",
+    "                self.cur_dict['biosample_id'] = self.biosample_id\n",
+    "                self.cur_dict['sra_id'] = self.sra_id\n",
+    "                self.cur_dict['attribute_name'] = self.temp_attribute\n",
+    "                self.cur_dict['temperature'] = self.temp_val\n",
+    "                self.cur_dict['units'] = self.temp_units\n",
+    "\n",
+    "                with open(self.output_file, 'a') as f:\n",
+    "                    json.dump(self.cur_dict, f)\n",
+    "                    f.write('\\n')\n",
+    "\n",
+    "            self.count += 1\n",
+    "            if self.count % 1000000 == 0:\n",
+    "                print('{} samples parsed'.format(self.count))\n",
+    "            # reset variables\n",
+    "            self.biosample_id = ''\n",
+    "            self.attribute_name = ''\n",
+    "            self.temp_val = None\n",
+    "            self.temp_units = 'C'\n",
+    "            self.sra_id = ''\n",
+    "\n",
+    "    def endDocument(self):\n",
+    "        print('Finished parsing\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "positive_attributes = {'air_temp', 'avg_temp', 'host_body_temp', 'soil_temp', 'surf_temp', 'temp', 'ww_temp'}\n",
+    "\n",
+    "# Parse the biosamples file\n",
+    "biosamples_path = '/home/ec2-user/workspace/data/biosample_set.xml'\n",
+    "\n",
+    "parser = xml.sax.make_parser()\n",
+    "handler = BioSamplesHandler(positive_attributes, '/home/ec2-user/workspace/data/results/temp_map_1.jsonl', '/home/ec2-user/workspace/data/results/multiple_temps_1.txt')\n",
+    "parser.setContentHandler(handler)\n",
+    "\n",
+    "# parser.parse(biosamples_path)\n",
+    "\n",
+    "# Code run in a python file to allow running in screen\n",
+    "# Code completed 2023-08-07 15:20:00 GMT-4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "## Standardising output for input to Postgres\n",
+    "- want all temperature values in degrees celsius\n",
+    "    - for input to Postgres, want to enter a single numeric value \n",
+    "- temperature should have 2 decimal places "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "temp_df = pd.read_json('/home/ec2-user/workspace/data/results/temp_map_1.jsonl', lines=True)\n",
+    "temp_df['temperature'] = temp_df['temperature'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of biosamples using degrees celsius:  171250\n",
+      "Number of biosamples using degrees fahrenheit:  363\n",
+      "Number of biosamples using kelvin:  80\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of biosamples using degrees celsius: ', temp_df[temp_df['units'] == 'C'].shape[0])\n",
+    "print('Number of biosamples using degrees fahrenheit: ', temp_df[temp_df['units'] == 'F'].shape[0])\n",
+    "print('Number of biosamples using kelvin: ', temp_df[temp_df['units'] == 'K'].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>biosample_id</th>\n",
+       "      <th>sra_id</th>\n",
+       "      <th>attribute_name</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>units</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6967</th>\n",
+       "      <td>SAMN03248457</td>\n",
+       "      <td>SRS777281</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>298.15</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6968</th>\n",
+       "      <td>SAMN03248458</td>\n",
+       "      <td></td>\n",
+       "      <td>temp</td>\n",
+       "      <td>298.15</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6969</th>\n",
+       "      <td>SAMN03248459</td>\n",
+       "      <td></td>\n",
+       "      <td>temp</td>\n",
+       "      <td>298.15</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6970</th>\n",
+       "      <td>SAMN03248460</td>\n",
+       "      <td></td>\n",
+       "      <td>temp</td>\n",
+       "      <td>298.15</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6971</th>\n",
+       "      <td>SAMN03248461</td>\n",
+       "      <td></td>\n",
+       "      <td>temp</td>\n",
+       "      <td>298.15</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169103</th>\n",
+       "      <td>SAMN35449015</td>\n",
+       "      <td>SRS17857065</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169104</th>\n",
+       "      <td>SAMN35449018</td>\n",
+       "      <td>SRS17857068</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169105</th>\n",
+       "      <td>SAMN35449019</td>\n",
+       "      <td>SRS17857070</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169106</th>\n",
+       "      <td>SAMN35449022</td>\n",
+       "      <td>SRS17857073</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169107</th>\n",
+       "      <td>SAMN35449023</td>\n",
+       "      <td>SRS17857072</td>\n",
+       "      <td>temp</td>\n",
+       "      <td>50.00</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        biosample_id       sra_id attribute_name  temperature units\n",
+       "6967    SAMN03248457    SRS777281           temp       298.15     K\n",
+       "6968    SAMN03248458                        temp       298.15     K\n",
+       "6969    SAMN03248459                        temp       298.15     K\n",
+       "6970    SAMN03248460                        temp       298.15     K\n",
+       "6971    SAMN03248461                        temp       298.15     K\n",
+       "...              ...          ...            ...          ...   ...\n",
+       "169103  SAMN35449015  SRS17857065           temp        50.00     K\n",
+       "169104  SAMN35449018  SRS17857068           temp       100.00     K\n",
+       "169105  SAMN35449019  SRS17857070           temp        50.00     K\n",
+       "169106  SAMN35449022  SRS17857073           temp       100.00     K\n",
+       "169107  SAMN35449023  SRS17857072           temp        50.00     K\n",
+       "\n",
+       "[80 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df[temp_df['units'] == 'K']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def standardise_units(row):\n",
+    "    if row['units'] == 'F':\n",
+    "        row['temperature'] = (row['temperature'] - 32) * 5/9\n",
+    "        row['units'] = 'C'\n",
+    "    elif row['units'] == 'K':\n",
+    "        row['temperature'] = row['temperature'] - 273.15\n",
+    "        row['units'] = 'C'\n",
+    "    return row\n",
+    "\n",
+    "    \n",
+    "temp_df = temp_df.apply(standardise_units, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df_postgres = temp_df[['biosample_id', 'sra_id', 'temperature']].rename(columns={'sra_id': 'run_id'})\n",
+    "temp_df_postgres.to_csv('biosample_temperature.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
