added export notebook for results

--- a/notebooks/export.ipynb
+++ b/notebooks/export.ipynb
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import csv"
+    "import csv\n",
+    "import json"
    ]
   },
   {
@@ -64,6 +65,46 @@
     "    writer = csv.writer(f)\n",
     "    writer.writerow(['biosample_id', 'run_id', 'tissue', 'bto_id'])\n",
     "    tissue_df.apply(lambda row: write_to_file(writer, row), axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Sex\n",
+    "- sex_output file has a line for each biosample \n",
+    "- each line can be directly written to a csv for postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sex_df = pd.read_json('../../data/results/sex_output_1.jsonl', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_to_file(writer, row):\n",
+    "    biosample_id = row['biosample_id']\n",
+    "    run_id = row['sra_id']\n",
+    "    male = bool(row['male']) if not np.isnan(row['male']) else ''\n",
+    "    female = bool(row['female']) if not np.isnan(row['female']) else ''\n",
+    "    other = bool(row['other']) if not np.isnan(row['other']) else ''\n",
+    "    writer.writerow([biosample_id, run_id, male, female, other])\n",
+    "\n",
+    "with open('../exports/sex_map.csv', 'w') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow(['biosample_id', 'run_id', 'male', 'female', 'other'])\n",
+    "    sex_df.apply(lambda row: write_to_file(writer, row), axis=1)\n",
+    "    "
    ]
   }
  ],
