updated tissue_map notebook for first and second pass reruns

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -63,7 +63,6 @@
     "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
     "\n",
     "# create a reverse mapping of labels to BRENDA ids\n",
-    "\n",
     "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
     "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
     "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n"
@@ -80,6 +79,7 @@
     "additional_labels = {}\n",
     "for key, value in labels_reverse.items():\n",
     "    if key.endswith(redundant_end_terms):\n",
+    "        # add the key without the redundant end term\n",
     "        additional_labels[' '.join(key.split()[:-1])] = value\n",
     "\n",
     "for key, value in additional_labels.items():\n",
@@ -314,7 +314,7 @@
     "\n",
     "def preprocess(input_str):\n",
     "    punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
-    "    input_str = re.sub(punct_pattern, ' ', input_str)\n",
+    "    input_str = re.sub(punct_pattern, ' ', input_str)   \n",
     "    return input_str.lower().strip()\n",
     "\n",
     "\n",
@@ -391,6 +391,369 @@
     "                f.write(b'\\n')\n",
     "\n",
     "    print(\"Finished parsing\", input_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Pass 1 Re-run:\n",
+    "- finds matches from a set of confident attributes using a Spacy matcher\n",
+    "    - preprocessing performed to remove punctuation adn convert to lowercase\n",
+    "- samples with no matches have attributes, title, and paragraph written to the the tissue_tmp_1.jsonl file\n",
+    "## Changes\n",
+    "- want to re run pass 1 to update the tissue_output_1.jsonl with more info\n",
+    "    - store the exact value from the biosamples metadata that the match came from\n",
+    "    - store the location that the match came from (attribute X, title, paragraph...)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from owlready2 import *\n",
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "import xml.sax\n",
+    "import json\n",
+    "import re\n",
+    "\n",
+    "def preprocess(input_str):\n",
+    "    punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
+    "    input_str = re.sub(punct_pattern, ' ', input_str)\n",
+    "    return input_str.lower().strip()\n",
+    "\n",
+    "# load the BRENDA ontology\n",
+    "onto = get_ontology('http://purl.obolibrary.org/obo/bto.owl').load()\n",
+    "\n",
+    "# load classes and synonyms\n",
+    "classes = {c.name: c.label.first() for c in onto.classes()}\n",
+    "class_synonyms = {c.name: c.hasExactSynonym + c.hasRelatedSynonym for c in onto.classes()}\n",
+    "\n",
+    "# add additional synonyms\n",
+    "class_synonyms['BTO_0000440'] += ['stool']\n",
+    "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
+    "\n",
+    "# create a reverse mapping of labels to BRENDA ids\n",
+    "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
+    "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
+    "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
+    "\n",
+    "# reverse mapping removes redundant end terms from the key where possible\n",
+    "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
+    "additional_labels = {}\n",
+    "for key, value in labels_reverse.items():\n",
+    "    if key.endswith(redundant_end_terms):\n",
+    "        # add the key without the redundant end term\n",
+    "        additional_labels[' '.join(key.split()[:-1])] = value\n",
+    "\n",
+    "for key, value in additional_labels.items():\n",
+    "    if key not in labels_reverse:\n",
+    "        labels_reverse[key] = value\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_lg')\n",
+    "# blank matcher with vocab from the large model\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "# standard tokenizer from spacy\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
+    "\n",
+    "patterns = []\n",
+    "for label in labels_reverse.keys():\n",
+    "    if label != '':\n",
+    "        tokens = tokenizer(label)\n",
+    "        pattern = [{'LOWER': token.lower_} for token in tokens]\n",
+    "        patterns.append(pattern)\n",
+    "\n",
+    "matcher.add('bto', patterns, greedy='LONGEST')\n",
+    "\n",
+    "class BioSamplesHandler(xml.sax.ContentHandler):\n",
+    "    '''\n",
+    "    SAX hander class to read in in formation from a BioSamples XMl file\n",
+    "    - Reads in the title, paragraph, and attributes of each sample into a dictionary\n",
+    "        - if no matching attribtue found, dictionary written as json to file for second pass\n",
+    "    - Found values written to provided sample_dict with the biosample_id as the key\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, positive_attributes, tmp_file, output_file):\n",
+    "        self.positive_attributes = positive_attributes\n",
+    "        self.output_file = output_file\n",
+    "        self.tmp_file = tmp_file\n",
+    "        self.biosample_id = ''\n",
+    "        self.cur_dict = {}\n",
+    "        self.attributes = {}\n",
+    "        self.attribute_name = ''\n",
+    "        self.is_title = False\n",
+    "        self.is_paragraph = False\n",
+    "        self.is_sra = False\n",
+    "        self.sra_id = ''\n",
+    "        self.count = 0\n",
+    "\n",
+    "    \n",
+    "    def startDocument(self):\n",
+    "        open(self.output_file, 'w').close()\n",
+    "        open(self.tmp_file, 'w').close()\n",
+    "        print(\"Parsing BioSamples XML file...\")\n",
+    "\n",
+    "    def startElement(self, name, attrs):\n",
+    "        if name == 'BioSample':\n",
+    "            self.biosample_id = attrs['accession']\n",
+    "        elif name == 'Title':\n",
+    "            self.is_title = True\n",
+    "        elif name == 'Paragraph':\n",
+    "            self.is_paragraph = True\n",
+    "        elif name == 'Attribute':\n",
+    "            try:\n",
+    "                self.attribute_name = attrs['harmonized_name']\n",
+    "            except KeyError:\n",
+    "                self.attribute_name = attrs['attribute_name']\n",
+    "        elif name == 'Id':\n",
+    "            if 'db' in attrs and attrs['db'] == 'SRA':\n",
+    "                self.is_sra = True\n",
+    "\n",
+    "    def characters(self, content):\n",
+    "        if self.is_title:\n",
+    "            self.cur_dict['title'] = content.lower()\n",
+    "            self.is_title = False\n",
+    "        elif self.is_paragraph:\n",
+    "            self.cur_dict['paragraph'] = content.lower()\n",
+    "            self.is_paragraph = False\n",
+    "        elif self.is_sra:\n",
+    "            self.sra_id = content\n",
+    "            self.is_sra = False\n",
+    "        elif self.attribute_name != '':\n",
+    "            self.attributes[self.attribute_name] = content.lower()\n",
+    "            self.attribute_name = ''\n",
+    "\n",
+    "    def endElement(self, name):\n",
+    "        if name == 'BioSample':\n",
+    "            attribute_vals = []\n",
+    "            text_matches = []\n",
+    "            # check if there are any positive attributes and extract the tissue\n",
+    "            intersect = set(self.attributes.keys()).intersection(self.positive_attributes)\n",
+    "            matches = []\n",
+    "            if len(intersect) == 1:\n",
+    "                attribute_value = preprocess(self.attributes[list(intersect)[0]])\n",
+    "                # check if the attribute value is a BTO term using the matcher\n",
+    "                attribute_tokens = tokenizer(attribute_value)\n",
+    "                matches = matcher(attribute_tokens, as_spans=True)\n",
+    "                # add the attribute name and value to a list if there is a match\n",
+    "                if matches != []:\n",
+    "                    attribute_vals.append(list(intersect)[0])\n",
+    "                    text_matches.append(self.attributes[list(intersect)[0]])\n",
+    "            elif len(intersect) > 1:\n",
+    "                # if there are multiple positive attributes, check if any of the values are BTO terms\n",
+    "                for attribute in intersect:\n",
+    "                    attribute_value = preprocess(self.attributes[attribute])\n",
+    "                    attribute_tokens = tokenizer(attribute_value) # check if the attribute value is a BTO term using the matcher\n",
+    "                    tmp_matches = matcher(attribute_tokens, as_spans=True)\n",
+    "                    matches += tmp_matches\n",
+    "                    if tmp_matches != []:\n",
+    "                        attribute_vals.append(attribute)\n",
+    "                        text_matches.append(self.attributes[attribute])\n",
+    "\n",
+    "            if matches == []:\n",
+    "                # no matches found, write to tmp file\n",
+    "                with open(self.tmp_file, 'a') as f:\n",
+    "                    self.cur_dict['biosample_id'] = self.biosample_id\n",
+    "                    self.cur_dict['attributes'] = self.attributes\n",
+    "                    self.cur_dict['sra_id'] = self.sra_id\n",
+    "                    json.dump(self.cur_dict, f)\n",
+    "                    f.write('\\n')\n",
+    "\n",
+    "            else:\n",
+    "                # matches found, add to output file\n",
+    "                tissue_matches = ','.join([m.text for m in matches])\n",
+    "                bto_matches = ','.join([labels_reverse[m.text.lower()] for m in matches])\n",
+    "                attributes = ','.join(attribute_vals)\n",
+    "                text = ','.join(text_matches)\n",
+    "                with open(self.output_file, 'a') as f:\n",
+    "                    json.dump({'biosample_id': self.biosample_id , 'sra_id': self.sra_id, 'source': attributes, 'text': text, 'tissue': tissue_matches, 'bto_matches': bto_matches}, f)\n",
+    "                    f.write('\\n')\n",
+    "                \n",
+    "            self.attribute_name = ''\n",
+    "            self.attributes = {}\n",
+    "            self.cur_dict = {}\n",
+    "            self.biosample_id = ''\n",
+    "            self.sra_id = ''\n",
+    "            self.count += 1\n",
+    "            if self.count % 1000000 == 0:\n",
+    "                print(self.count, \"samples parsed\")\n",
+    "\n",
+    "\n",
+    "    def endDocument(self):\n",
+    "        print(self.count, \"samples parsed\")\n",
+    "        print(\"Finished parsing BioSamples XML file\")\n",
+    "                \n",
+    "\n",
+    "positive_attributes = {'tissue', 'cell_type', 'cell_line', 'cell_subtype', 'source_name', 'host_tissue_sampled', 'body_habitat', 'body_product', 'host_body_product', 'host_body_habitat'}\n",
+    "\n",
+    "# parse the BioSamples XML file\n",
+    "parser = xml.sax.make_parser()\n",
+    "handler = BioSamplesHandler(positive_attributes, '/home/ec2-user/workspace/data/results/tissue_tmp_rerun_1.jsonl', '/home/ec2-user/workspace/data/results/tissue_output_1_rerun.jsonl')\n",
+    "parser.setContentHandler(handler)\n",
+    "\n",
+    "# comment out the following line to rerun the parser\n",
+    "parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n",
+    "\n",
+    "# biosample_set.xml.gz redownloaded on 2023/09/15\n",
+    "# code run on 2023/09/15 at 1435 in a separate python file\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "# Pass 2 Re-run\n",
+    "- stores more information about where the exact text match came from \n",
+    "- run in parallel in separate file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from owlready2 import *\n",
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "from spacy.tokenizer import Tokenizer\n",
+    "# import orjson as json\n",
+    "import json\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "\n",
+    "\n",
+    "def preprocess(input_str):\n",
+    "    punct_pattern = r'\\ *[_&<>:-]+\\ *'\n",
+    "    input_str = re.sub(punct_pattern, ' ', input_str)\n",
+    "    return input_str.lower().strip()\n",
+    "\n",
+    "\n",
+    "# file will read an input file that is in the format tissue_tmp_1ax and will output a file in the format tissue_tmp_2ax.jsonl\n",
+    "\n",
+    "# load the BRENDA ontology\n",
+    "onto = get_ontology('http://purl.obolibrary.org/obo/bto.owl').load()\n",
+    "\n",
+    "# load classes and synonyms\n",
+    "classes = {c.name: c.label.first() for c in onto.classes()}\n",
+    "class_synonyms = {c.name: c.hasExactSynonym + c.hasRelatedSynonym for c in onto.classes()}\n",
+    "\n",
+    "# add additional synonyms\n",
+    "class_synonyms['BTO_0000440'] += ['stool']\n",
+    "class_synonyms['BTO_0005238'] += ['HEK293-T-REx']\n",
+    "\n",
+    "# create a reverse mapping of labels to BRENDA ids\n",
+    "classes_reverse = {preprocess(c.label.first()): c.name for c in onto.classes() if c.label != []}\n",
+    "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
+    "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
+    "\n",
+    "# reverse mapping removes redundant end terms from the key where possible\n",
+    "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
+    "additional_labels = {}\n",
+    "for key, value in labels_reverse.items():\n",
+    "    if key.endswith(redundant_end_terms):\n",
+    "        # add the key without the redundant end term\n",
+    "        additional_labels[' '.join(key.split()[:-1])] = value\n",
+    "\n",
+    "for key, value in additional_labels.items():\n",
+    "    if key not in labels_reverse:\n",
+    "        labels_reverse[key] = value\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_lg')\n",
+    "# blank matcher with vocab from the large model\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "# standard tokenizer from spacy\n",
+    "tokenizer = Tokenizer(nlp.vocab)\n",
+    "\n",
+    "patterns = []\n",
+    "for label in labels_reverse.keys():\n",
+    "    tokens = tokenizer(label)\n",
+    "    pattern = [{'LOWER': token.lower_} for token in tokens]\n",
+    "    patterns.append(pattern)\n",
+    "\n",
+    "matcher.add('bto', patterns, greedy='LONGEST')\n",
+    "\n",
+    "\n",
+    "assert len(sys.argv) == 2, \"Please provide an input file\"\n",
+    "input_file = sys.argv[1]\n",
+    "output_file = input_file.replace('tmp_rerun_1', 'output_2_rerun')\n",
+    "tmp_file = input_file.replace('tmp_rerun_1', 'tmp_2_rerun')\n",
+    "\n",
+    "open(output_file, 'w').close()\n",
+    "open(tmp_file, 'w').close()\n",
+    "\n",
+    "with open(input_file, 'r') as f:\n",
+    "    print(\"Starting second pass for \", input_file)\n",
+    "    for line in f:\n",
+    "        cur_dict = {} # stores the data to be written to the output file if applicable\n",
+    "        matches = [] # stores the matches for the current biosample\n",
+    "        matched_attributes = [] # stores the matched attributes for the current biosample\n",
+    "        text_matches = [] # stores the text matches for the current biosample\n",
+    "        # biosample_dict stores the biosample content\n",
+    "        biosample_dict = json.loads(line)\n",
+    "        cur_dict['biosample_id'] = biosample_dict['biosample_id']\n",
+    "        cur_dict['sra_id'] = biosample_dict['sra_id']\n",
+    "        # attributes is a dictionary of the biosample attributes\n",
+    "        attributes = biosample_dict['attributes']\n",
+    "        for attribute_name in attributes:\n",
+    "            attribute_value = preprocess(attributes[attribute_name])\n",
+    "            attribute_tokens = tokenizer(attribute_value)\n",
+    "            cur_match = matcher(attribute_tokens, as_spans=True)\n",
+    "            if cur_match != []:\n",
+    "                matches += cur_match\n",
+    "                matched_attributes += [attribute_name]\n",
+    "                text_matches += [attributes[attribute_name]]\n",
+    "\n",
+    "\n",
+    "        # if matches are found, writes the biosample content to the output file\n",
+    "        if matches != []:\n",
+    "            tissue_matches = ','.join({m.text for m in matches})\n",
+    "            bto_matches = ','.join({labels_reverse[m.text.lower()] for m in matches})\n",
+    "            attribute_matches = ','.join(matched_attributes)\n",
+    "            text = ','.join(text_matches)\n",
+    "            cur_dict['source'] = attribute_matches\n",
+    "            cur_dict['text'] = text\n",
+    "            cur_dict['tissue'] = tissue_matches\n",
+    "            cur_dict['bto_matches'] = bto_matches\n",
+    "            with open(output_file, 'a') as f:\n",
+    "                json.dump(cur_dict, f)\n",
+    "                f.write('\\n')\n",
+    "\n",
+    "        else:\n",
+    "            # no matches found in the attributes, writes the biosample content to a tmp file for third pass\n",
+    "            with open(tmp_file, 'a') as f:\n",
+    "                json.dump(biosample_dict, f)\n",
+    "                f.write('\\n')\n",
+    "\n",
+    "    print(\"Finished parsing\", input_file)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Commands run for pass 2 file\n",
+    "```\n",
+    "split -1000000 tissue_tmp_rerun_1.jsonl tissue_tmp_rerun_1_\n",
+    "ls tissue_tmp_rerun_1_a* | parallel python tissue_map_pass_2_parallel.py\n",
+    "\n",
+    "cat tissue_output_2_rerun_a* >> tissue_output_2_rerun.jsonl\n",
+    "cat tissue_tmp_2_rerun_a* >> tissue_tmp_2_rerun.jsonl\n",
+    "```\n",
+    "- move file back to the results folder\n",
+    "\n",
+    "## Rerun results\n",
+    "- first pass: 10954681\n",
+    "- second pass: 6488557\n",
+    "- 17443238 total samples labelled\n",
+    "- 17652236 no labels\n"
    ]
   }
  ],
