fixed bug with multiple matches in single attribute

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -542,8 +542,11 @@
     "                matches = matcher(attribute_tokens, as_spans=True)\n",
     "                # add the attribute name and value to a list if there is a match\n",
     "                if matches != []:\n",
-    "                    attribute_vals.append(list(intersect)[0])\n",
-    "                    text_matches.append(self.attributes[list(intersect)[0]])\n",
+    "                    # add the attribute name and text for each match\n",
+    "                    for _ in matches:\n",
+    "                        attribute_vals.append(list(intersect)[0])\n",
+    "                        text_matches.append(self.attributes[list(intersect)[0]])\n",
+    "\n",
     "            elif len(intersect) > 1:\n",
     "                # if there are multiple positive attributes, check if any of the values are BTO terms\n",
     "                for attribute in intersect:\n",
@@ -552,8 +555,10 @@
     "                    tmp_matches = matcher(attribute_tokens, as_spans=True)\n",
     "                    matches += tmp_matches\n",
     "                    if tmp_matches != []:\n",
-    "                        attribute_vals.append(attribute)\n",
-    "                        text_matches.append(self.attributes[attribute])\n",
+    "                        # add the attribute name and text for each match\n",
+    "                        for _ in tmp_matches:\n",
+    "                            attribute_vals.append(attribute)\n",
+    "                            text_matches.append(self.attributes[attribute])\n",
     "\n",
     "            if matches == []:\n",
     "                # no matches found, write to tmp file\n",
@@ -600,7 +605,11 @@
     "parser.parse('/home/ec2-user/workspace/data/biosample_set.xml')\n",
     "\n",
     "# biosample_set.xml.gz redownloaded on 2023/09/15\n",
-    "# code run on 2023/09/15 at 1435 in a separate python file\n"
+    "# code run on 2023/09/15 at 1435 in a separate python file\n",
+    "\n",
+    "# biosample_set.xml.gz redownloaded on 2023/10/06\n",
+    "# code run on 2023/10/06 at 1840 in a separate python file\n",
+    "# total samples parsed: 35369235\n"
    ]
   },
   {
@@ -706,10 +715,11 @@
     "            attribute_value = preprocess(attributes[attribute_name])\n",
     "            attribute_tokens = tokenizer(attribute_value)\n",
     "            cur_match = matcher(attribute_tokens, as_spans=True)\n",
+    "            matches += cur_match\n",
     "            if cur_match != []:\n",
-    "                matches += cur_match\n",
-    "                matched_attributes += [attribute_name]\n",
-    "                text_matches += [attributes[attribute_name]]\n",
+    "                for _ in cur_match:\n",
+    "                    matched_attributes += [attribute_name]\n",
+    "                    text_matches += [attributes[attribute_name]]\n",
     "\n",
     "\n",
     "        # if matches are found, writes the biosample content to the output file\n",
@@ -754,6 +764,20 @@
     "- second pass: 6488557\n",
     "- 17443238 total samples labelled\n",
     "- 17652236 no labels\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ISSUES with initial rerun\n",
+    "- when attributes have more than one match in them, the attributes are only written once\n",
+    "\n",
+    "`{\"biosample_id\": \"SAMN05153636\", \"sra_id\": \"SRS1456259\", \"source\": \"cell_type,source_name\", \"text\": \"haematopoietic stem cell/multipotent progenitor,bone marrow\", \"tissue\": \"haematopoietic,stem,progenitor,bone marrow\", \"bto_matches\": \"BTO_0000574,BTO_0001300,BTO_0000725,BTO_0000141\"}`\n",
+    "\n",
+    "- leads to issues when importing into csv as number of matches per attribute (source) is not stored and only the numebr of sources are entered into the database\n",
+    "\n",
+    "SAMN05907780"
    ]
   }
  ],
