updated rerun 2 code

--- a/notebooks/tissue_map/tissue_map.ipynb
+++ b/notebooks/tissue_map/tissue_map.ipynb
@@ -663,17 +663,8 @@
     "class_synonyms_reverse = {preprocess(s): c for c, syn in class_synonyms.items() for s in syn}\n",
     "labels_reverse = {**classes_reverse, **class_synonyms_reverse}\n",
     "\n",
-    "# reverse mapping removes redundant end terms from the key where possible\n",
-    "redundant_end_terms = ('tissue', 'tissues', 'cell', 'cells')\n",
-    "additional_labels = {}\n",
-    "for key, value in labels_reverse.items():\n",
-    "    if key.endswith(redundant_end_terms):\n",
-    "        # add the key without the redundant end term\n",
-    "        additional_labels[' '.join(key.split()[:-1])] = value\n",
-    "\n",
-    "for key, value in additional_labels.items():\n",
-    "    if key not in labels_reverse:\n",
-    "        labels_reverse[key] = value\n",
+    "# DON'T REMOVE REDUNDANT END TERMS\n",
+    "# - leads to false positives for terms like \"M cell\" and \"T cell\"\n",
     "\n",
     "nlp = spacy.load('en_core_web_lg')\n",
     "# blank matcher with vocab from the large model\n",
@@ -742,7 +733,9 @@
     "                json.dump(biosample_dict, f)\n",
     "                f.write('\\n')\n",
     "\n",
-    "    print(\"Finished parsing\", input_file)\n"
+    "    print(\"Finished parsing\", input_file)\n",
+    "\n",
+    "# code run on 2023/10/08 at 1425 in a separate python file for parallelization\n"
    ]
   },
   {
@@ -763,7 +756,15 @@
     "- first pass: 10954681\n",
     "- second pass: 6488557\n",
     "- 17443238 total samples labelled\n",
-    "- 17652236 no labels\n"
+    "- 17652236 no labels\n",
+    "\n",
+    "\n",
+    "## Rerun round 2 results\n",
+    "- first pass: 11118049\n",
+    "- second pass: 6557376\n",
+    "- 17675425 total samples labelled\n",
+    "- 17693810 no labels\n",
+    "- 35369235 total samples"
    ]
   },
   {
@@ -777,7 +778,9 @@
     "\n",
     "- leads to issues when importing into csv as number of matches per attribute (source) is not stored and only the numebr of sources are entered into the database\n",
     "\n",
-    "SAMN05907780"
+    "## Fixes\n",
+    "- add attribute and text matches in a loop for each match found\n",
+    "- attribute and text matches fields will have the same number of comma separated values as the tissue_match fields"
    ]
   }
  ],
